--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-	"name": "hitesh-chai-aur-backend",
-	"version": "1.0.0",
-	"description": "Basic App TO deploy",
-	"type": "module",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@github.com/FREAKIN-D1A/hitesh-chai-aur-backend.git"
-	},
-	"author": "Dewan Mohammad Asad",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/FREAKIN-D1A/hitesh-chai-aur-backend/issues"
-	},
-	"homepage": "https://github.com/FREAKIN-D1A/hitesh-chai-aur-backend#readme",
-	"dependencies": {
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2"
-	}
+  "name": "hitesh-chai-aur-backend",
+  "version": "1.0.0",
+  "description": "Basic App TO deploy",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/FREAKIN-D1A/hitesh-chai-aur-backend.git"
+  },
+  "author": "Dewan Mohammad Asad",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/FREAKIN-D1A/hitesh-chai-aur-backend/issues"
+  },
+  "homepage": "https://github.com/FREAKIN-D1A/hitesh-chai-aur-backend#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4"
+  }
 }
