--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8000
 MONGODB_PASSWORD=alpha411
 MONGODB_URI=mongodb+srv://d1adewanasad_dev:alpha411@projectcluster0.lzvogc4.mongodb.net/chai-aur-backend?retryWrites=true&w=majority
+CORS_ORIGIN =*
