'user model and video model'

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 PORT=8000
 MONGODB_PASSWORD=alpha411
 MONGODB_URI=mongodb+srv://d1adewanasad_dev:alpha411@projectcluster0.lzvogc4.mongodb.net/chai-aur-backend?retryWrites=true&w=majority
-CORS_ORIGIN =*
+CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET=3as3fr6aas6fgw636w49ksdg65a6g6r4g66jug6hr3646wre4eeghf
+ACCESS_TOKEN_EXPIRY=1d 
+
+REFRESH_TOKEN_SECRET=asf94ukuyk4l4f6gsre23gi4lef6e4fgr4grdth46sf1e5qfewf9q3rs
+REFRESH_TOKEN_EXPIRY=10d
