--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ ACCESS_TOKEN_EXPIRY=1d
 
 REFRESH_TOKEN_SECRET=asf94ukuyk4l4f6gsre23gi4lef6e4fgr4grdth46sf1e5qfewf9q3rs
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUD_NAME=doo81xgph
+COUDINARY_API_KEY=473826538429674
+COUDINARY_API_SECRET=fJpgs8axGr72jizu2aAKrL6v-lE
